--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 
 	<head>
 
@@ -19,23 +19,23 @@
 
 		<!-- MENU PRINCIPALE --> 
 
-		<div class="container">
-		<ul class="menu-ul">
+			<div class="container">
+			<ul class="menu-ul">
 
-		<li  class="menu-li"> <a href="index.html" target="_self">Home</a> </li>
-		<li  class="menu-li active"> <a href="sudinoi.html" target="_self">Su di noi</a> </li>
-		<li  class="menu-li"> <a href="lecamere.html" target="_self">Le camere</a></li>
-		<li  class="menu-li"> <a href="prezzi.html" target=_self>Prezzi</a></li>
-		<li  class="menu-li"> <a href="comeraggiungerci.html" target="_self">Come raggiungerci</a></li>
-		<li  class="menu-li"> <a href="contatti.html" target="_self">Contatti</a></li>
-		<!-- menu sezione cambio lingua --> 
-		<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
-		<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
-		<!-- fine menu sezione cambio lingua --> 
+		<li  class="menu-li"> <a href="homeen.html" target="_self">Home</a> </li>
+		<li  class="menu-li active"> <a href="aboutus.html" target="_self">About us</a> </li>
+		<li  class="menu-li"> <a href="rooms.html" target="_self">Rooms</a></li>
+		<li  class="menu-li"> <a href="prices.html" target=_self>Prices</a></li>
+		<li  class="menu-li"> <a href="howtoreachus.html" target="_self">How to reach us</a></li>
+		<li  class="menu-li"> <a href="contacts.html" target="_self">Contacts</a></li>
+			<!-- menu sezione cambio lingua --> 
+			<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
+			<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
+			<!-- fine menu sezione cambio lingua --> 
 
-		</ul>
-		</div>
-		<!-- FINE MENU PRINCIPALE --> 
+			</ul>
+			</div>
+			<!-- FINE MENU PRINCIPALE --> 
 
 		<!-- IMMAGINE DELLA TESTATA --> 
 		<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
@@ -48,16 +48,16 @@
 
 	<div id="col1">
 	
-		<p>
-		Questa casa è da sempre appartenuta alla nostra famiglia e zia Nina vi ha vissuto per quasi 100 anni, la 
-		magnolia che cresce alta e robusta di fronte alla casa è stata piantata quando lei era ancora piccola e mantiene
-		vivo il suo ricordo.
-		</p>
-		<p>Zia Nina, qui al numero 7, ha sempre ricevuto amici e forestieri con il piacere dell'accoglienza e della condivisione.</p>
-		<p>
-		Oggi è <strong>Ilaria</strong>, tris-nipote di Nina, a darvi benvenuto in questo rinnovato ambiente
-		perché il vostro passaggio possa continuare ad animare le antiche stanze con nuove storie, come ci ha insegnato a fare Nina.
-		</p>    
+	<p>
+This house has always belonged to our family and aunt Nina had been living here for almost 100 years.
+The magnolia that grows high and strong in front of the house, was planted when she was a child and still keeps her 
+memory alive.
+</p>
+<p> Aunt Nina, here at number 7, used to receive friends and foreigners for the pleasure of welcoming and sharing.</p>
+<p>
+Today<strong>Ilaria</strong>, Nina's great-grandniece, welcomes you in this renovated space so that your
+passage may keep the ancient rooms animated with new stories, as Nina tought us to do. 
+</p>
 
 	</div>
 
@@ -87,7 +87,7 @@
 	alt="facebooklogo" ></a>  
 	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
 	width="44" alt="instagramlogo" ></a> 
-	</p>
+	
 
 
 	</footer>
