--- a/contacts.html
+++ b/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 
 <head>
 
@@ -47,13 +47,13 @@
 		
 		<div id="col1">
 
-			<form name="Name" action="" method="POST" enctype="application/x-www-form-urlencoded">
+			<form name="Name" action="mailt:chiarabaldissera77@gmail.com" method="POST" enctype="application/x-www-form-urlencoded">
 			<br>
-			Name <input type="text" name="name" value="" size="40" maxlength="40"  min="" max="" accept=""/>
+			Name <input type="text" name="name" value="" size="40" maxlength="40"  />
 			<br><br>
-			Surname <input type="text" name="surname" value="" size="40" maxlength="40"  min="" max="" accept=""/>
+			Surname <input type="text" name="surname" value="" size="40" maxlength="40" />
 			<br><br>
-			Email address <input type="text" name="email" value="" size="40" maxlength="40"  min="" max="" accept=""/>
+			Email address <input type="text" name="email" value="" size="40" maxlength="40"  />
 			<br><br>
 			
 			Select a room type
@@ -89,7 +89,7 @@
 		alt="facebooklogo" ></a>  
 		<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
 		width="44" alt="instagramlogo" ></a> 
-		</p>
+		
 
 
 		</footer>
