--- a/contatti.html
+++ b/contatti.html
@@ -47,13 +47,13 @@
 		
 		<div id="col1">
 
-			<form name="Name" action="" method="POST" enctype="application/x-www-form-urlencoded">
+			<form name="Name" action="mailto:chiarabalddissera77@gmail.com?subject=richiesta" method="POST" enctype="application/x-www-form-urlencoded">
 			<br>
-			Nome <input type="text" name="name" value="" size="40" maxlength="40"  min="" max="" accept=""/>
+			Nome <input type="text" name="name" value="" size="40" maxlength="40"  />
 			<br><br>
-			Cognome <input type="text" name="surname" value="" size="40" maxlength="40"  min="" max="" accept=""/>
+			Cognome <input type="text" name="surname" value="" size="40" maxlength="40"  />
 			<br><br>
-			Indirizzo email <input type="text" name="email" value="" size="40" maxlength="40"  min="" max="" accept=""/>
+			Indirizzo email <input type="text" name="email" value="" size="40" maxlength="40"  />
 			<br><br>
 			
 			Seleziona una stanza
@@ -89,7 +89,7 @@
 		alt="facebooklogo" ></a>  
 		<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
 		width="44" alt="instagramlogo" ></a> 
-		</p>
+		
 
 
 		</footer>
