--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html>
+	<html  lang="it">
 
 	<head>
 
@@ -86,7 +86,7 @@ Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a c
 	alt="facebooklogo" ></a>  
 	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
 	width="44" alt="instagramlogo" ></a> 
-	</p>
+	
 
 
 	</footer>
