--- a/lecamere.html
+++ b/lecamere.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="it">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,41 +42,41 @@
 <!-- CONTENUTO PRINCIPALE--> 
 
 
-	<div id="col-camere">
+	<div class="col-camere">
 			<h3>Le nostre stanze ampie e luminose, sono arredate in stile provenzale, e sono dotate di
 			tutte le comodità</h3>
 	</div>
 
 
 
-		<div id="col-camere">
-			<p>
-			<h2>MAGNOLIA</h2> <br>Camera doppia matrimoniale, vista giardino, bagno privato con doccia, aria condizionata, TV, wifi 
+		<div class="col-camere">
+			
+			<h2>MAGNOLIA</h2> <p>Camera doppia matrimoniale, vista giardino, bagno privato con doccia, aria condizionata, TV, wifi 
 			</p>
 		</div>
 
-		<div id="col-camere">
-			<img class="miniature" src="immagini/bedroom1.jpg"> <img class="miniature"  src="immagini/bathroom1.jpg">
+		<div class="col-camere">
+			<img class="miniature" src="immagini/bedroom1.jpg" alt="bedroom1"> <img class="miniature"  src="immagini/bathroom1.jpg" alt="bathroom1">
 		</div>
 
 
-			<div id="col-camere">
-			<p>
-			<h2> OLEANDRO </h2> - Camera doppia letto matrimoniale, terrazza, bagno privato con doccia, aria condizionata, TV, wifi
+			<div class="col-camere">
+			
+			<h2> OLEANDRO </h2> <p> Camera doppia letto matrimoniale, terrazza, bagno privato con doccia, aria condizionata, TV, wifi
 			</p>
 		</div>
 
-		<div id="col-camere">
-			<img class="miniature"  src="immagini/bedroom2.jpg"> <img  class="miniature"  src="immagini/bathroom1.jpg">
+		<div class="col-camere">
+			<img class="miniature"  src="immagini/bedroom2.jpg" alt="bedroom2"> <img  class="miniature"  src="immagini/bathroom1.jpg" alt="bathroom1" >
 		</div>
 
 
-		<div id="col-camere">
-			<p>    <h2>ORTENSIA </h2> - Camera doppia con letti sigoli,balconcino, bagno privato con doccia, aria condizionata, TV, wifi </p>	
+		<div class="col-camere">
+			    <h2>ORTENSIA </h2> <p> Camera doppia con letti sigoli,balconcino, bagno privato con doccia, aria condizionata, TV, wifi </p>	
 		</div>
 
-			<div id="col-camere">
-			<img class="miniature"    src="immagini/bedroom3.jpg"> <img  class="miniature"  src="immagini/bathroom3.jpg">
+			<div class="col-camere">
+			<img class="miniature"    src="immagini/bedroom3.jpg" alt="bedroom3"> <img  class="miniature"  src="immagini/bathroom3.jpg" alt="bathroom3">
 		</div>
 
 		
@@ -95,7 +95,7 @@
 	alt="facebooklogo" ></a>  
 	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
 	width="44" alt="instagramlogo" ></a> 
-	</p>
+	
 
 
 	</footer>
