--- a/rooms.html
+++ b/rooms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,25 +11,25 @@
 
 <!-- TESTATA SITO - MENU E IMMAGINE --> 
 
-	<!-- MENU PRINCIPALE --> 
+<!-- MENU PRINCIPALE --> 
 
-	<div class="container">
-	<ul class="menu-ul">
+			<div class="container">
+			<ul class="menu-ul">
 
-	<li  class="menu-li"> <a href="homeen.html" target="_self">Home</a> </li>
+		<li  class="menu-li"> <a href="homeen.html" target="_self">Home</a> </li>
 		<li  class="menu-li"> <a href="aboutus.html" target="_self">About us</a> </li>
 		<li  class="menu-li active"> <a href="rooms.html" target="_self">Rooms</a></li>
 		<li  class="menu-li"> <a href="prices.html" target=_self>Prices</a></li>
 		<li  class="menu-li"> <a href="howtoreachus.html" target="_self">How to reach us</a></li>
 		<li  class="menu-li"> <a href="contacts.html" target="_self">Contacts</a></li>
-	<!-- menu sezione cambio lingua --> 
-	<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
-	<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
-	<!-- fine menu sezione cambio lingua --> 
-	</ul>
-	</div>
+			<!-- menu sezione cambio lingua --> 
+			<li  class="menu-li"> <a href="index.html" target="_self"> ITA</a></li>
+			<li  class="menu-li"> <a href="homeen.html" target="_self"> ENG</a></li>
+			<!-- fine menu sezione cambio lingua --> 
 
-	<!-- FINE MENU PRINCIPALE --> 
+			</ul>
+			</div>
+			<!-- FINE MENU PRINCIPALE --> 
 
 	<!-- IMMAGINE DELLA TESTATA --> 
 	<img class="header-img" alt="magnolia-header" src="immagini/magnolia-head-1374.jpg">
@@ -42,41 +42,40 @@
 <!-- CONTENUTO PRINCIPALE--> 
 
 
-	<div id="col-camere">
-			<h3>Le nostre stanze ampie e luminose, sono arredate in stile provenzale, e sono dotate di
-			tutte le comodità</h3>
+	<div class="col-camere">
+			<h3>Our spacious and bright roms are all furnished in provençal style and offer full comfort</h3>
 	</div>
 
 
 
-		<div id="col-camere">
-			<p>
-			<h2>MAGNOLIA</h2> <br>Camera doppia matrimoniale, vista giardino, bagno privato con doccia, aria condizionata, TV, wifi 
+		<div class="col-camere">
+			
+			<h2>MAGNOLIA</h2> <p>Double room, garden view, private bathrooms with shower, air-confidtioning, TV, wifi 
 			</p>
 		</div>
 
-		<div id="col-camere">
-			<img class="miniature" src="immagini/bedroom1.jpg"> <img class="miniature"  src="immagini/bathroom1.jpg">
+		<div class="col-camere">
+			<img class="miniature" src="immagini/bedroom1.jpg" alt="bedroom1"> <img class="miniature"  src="immagini/bathroom1.jpg" alt="bathroom1">
 		</div>
 
 
-			<div id="col-camere">
-			<p>
-			<h2> OLEANDRO </h2> - Camera doppia letto matrimoniale, terrazza, bagno privato con doccia, aria condizionata, TV, wifi
+			<div class="col-camere">
+			
+			<h2> OLEANDRO </h2> <p> Double room, terrasse, private bathroom with showe, air-conditioning, TV, wifi
 			</p>
 		</div>
 
-		<div id="col-camere">
-			<img class="miniature"  src="immagini/bedroom2.jpg"> <img  class="miniature"  src="immagini/bathroom1.jpg">
+		<div class="col-camere">
+			<img class="miniature"  src="immagini/bedroom2.jpg" alt="bedroom2"> <img  class="miniature"  src="immagini/bathroom1.jpg" alt="bathroom1" >
 		</div>
 
 
-		<div id="col-camere">
-			<p>    <h2>ORTENSIA </h2> - Camera doppia con letti sigoli,balconcino, bagno privato con doccia, aria condizionata, TV, wifi </p>	
+		<div class="col-camere">
+			    <h2>ORTENSIA </h2> <p> Double room (single beds), balcony, provate bathroom with shower, air-conditioning, TV, wifi  </p>	
 		</div>
 
-			<div id="col-camere">
-			<img class="miniature"    src="immagini/bedroom3.jpg"> <img  class="miniature"  src="immagini/bathroom3.jpg">
+			<div class="col-camere">
+			<img class="miniature"    src="immagini/bedroom3.jpg" alt="bedroom3"> <img  class="miniature"  src="immagini/bathroom3.jpg" alt="bathroom3">
 		</div>
 
 		
@@ -95,7 +94,7 @@
 	alt="facebooklogo" ></a>  
 	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
 	width="44" alt="instagramlogo" ></a> 
-	</p>
+	
 
 
 	</footer>
