--- a/sudinoi.html
+++ b/sudinoi.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html  lang="it">
 	<head>
 
 		<meta charset="UTF-8">
@@ -87,7 +86,7 @@
 	alt="facebooklogo" ></a>  
 	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
 	width="44" alt="instagramlogo" ></a> 
-	</p>
+	
 
 
 	</footer>
