--- a/homeen.html
+++ b/homeen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html>
+	<html  lang="en">
 
 	<head>
 
@@ -88,7 +88,7 @@ Ilaria will wait for you travellers with your stories and make you feel like at 
 	alt="facebooklogo" ></a>  
 	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
 	width="44" alt="instagramlogo" ></a> 
-	</p>
+	
 
 
 	</footer>
