--- a/howtoreachus.html
+++ b/howtoreachus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html>
+		<html  lang="en">
 
 	<head>
 
@@ -73,7 +73,7 @@ Free transfer upon request.
 
 
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2787.9633043474164!2d12.239563115564449!3d45.67163697910404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477937d6c81a02d3%3A0xd98bd0f7ab54f7d!2sVia+Antonio+Rosmini%2C+31100+Treviso+TV!5e0!3m2!1sit!2sit!4v1470922069806" width="700" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2787.9633043474164!2d12.239563115564449!3d45.67163697910404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477937d6c81a02d3%3A0xd98bd0f7ab54f7d!2sVia+Antonio+Rosmini%2C+31100+Treviso+TV!5e0!3m2!1sit!2sit!4v1470922069806" width="700" height="550"  style="border:0" allowfullscreen></iframe>
 
 
 		<br>
@@ -96,7 +96,7 @@ Free transfer upon request.
 	alt="facebooklogo" ></a>  
 	<a href="http://www.instagram.com" > <img class="social-logo"   src="immagini/instagram.png"
 	width="44" alt="instagramlogo" ></a> 
-	</p>
+	
 
 
 	</footer>
