--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <p>
 A pochi passi dalle mura del centro storico di Treviso trovate Nina 7, un'accogliente villa del primo'900 immersa nel verde di un tranquillo quartiere residenziale.</p>
 <p>
-Nina 7 dispone di 3 stanze con bagno privato, una sala per la prima colazione, una zona relax e un rigoglioso giardino arredato.</p>
+Nina 7 dispone di 3 stanze con bagno privato, una sala per la prima colazione, una zona relax e un rigoglioso giardino di begonie.</p>
 <p>
 Per la prima colazione, oltre al tradizionale cornetto e cappuccino, offriamo una varietà di dolci e biscotti fatti in casa, pane fresco, succhi naturali, centrifughe di frutta e verdura con ingredienti Bio provenienti dalle nostre zone.
 Ilaria attenderà voi viaggiatori e le vostre storie, per farvi sentire come a casa.</p>
